--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/font-awesome/css/font-awesome.min.css"
+              "src/custom-theme.scss",
+              "src/styles.css"
             ],
             "scripts": []
           },
