--- a/package.json
+++ b/package.json
@@ -20,11 +20,8 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "font-awesome": "^4.7.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "rxjs": "~6.6.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.7",
@@ -38,6 +35,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "tslib": "^2.3.0"
   }
 }
