--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -37,6 +36,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "schematics-scss-migrate": "^1.3.14",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "tslib": "^2.3.0",
   }
 }
