--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "schematics-scss-migrate": "^1.3.14",
     "typescript": "~4.3.5",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.0"
   }
 }
